--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "discord-manga-tracker",
+  "version": "1.0.0",
+  "description": "A Discord bot that tracks manga updates from MangaDex for users.",
+  "main": "manga-chapter-updates.js",
+  "scripts": {
+    "start": "node manga-chapter-updates.js"
+  },
   "dependencies": {
     "axios": "^1.7.9",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "node-schedule": "^2.1.1"
-  }
+  },
+  "author": "TheDoctorTTV",
+  "license": "MIT"
 }
